# Heat_Conduction

./: CMakeLists.txt  Heat_Conduction.pro  Heat_Conduction_vol2.pro  LICENSE  README.md  test.txt
include/: border.h  parser.h
src/: border.cpp  main.cpp  parser.cpp  src.pri
src/border_interpreter/: border_interpreter.cpp  border_interpreter.h  border_interpreter.pri
src/components/: border.cpp  border.h  components.pri  layer.h  tfdynamics.cpp  tfdynamics.h  tfgeometry.h
src/core/: argument.cpp  argument.h  border.cpp  border.h  border_interpreter.cpp  border_interpreter.h  calc_func.cpp  calc_func.h  core.pri  layer.h  layercalc.cpp  layercalc.h  material.cpp  material.h  point.h  problem.cpp  problem.h  tfdinamics.cpp  tfdinamics.h  tfdynamics.cpp  tfdynamics.h  tfgeometry.cpp  tfgeometry.h
src/draw/: draw.pri  plottingwidget.cpp  plottingwidget.h
src/editor/: calculate_dialog.cpp  calculate_dialog.h  calculatedialog.cpp  calculatedialog.h  edge.cpp  editor.cpp  editor.h  editor.pri  graphical_input_dialog.cpp  graphical_input_dialog.h  graphwidget.cpp  graphwidget.h  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  vertex.cpp
src/graphical_input/: edge.cpp  edge.h  graphical_input.pri  graphical_input_dialog.cpp  graphwidget.cpp  graphwidget.h  vertex.cpp  vertex.h
src/gui/: calculate_dialog.cpp  calculate_dialog.h  gui.pri  mainwindow.cpp  mainwindow.h
src/plot/: plottingwidget.cpp  plottingwidget.h
test/: david_star.txt  difficult.txt  fehu.txt  mipt_ash_nu.txt  square.txt  test.cpp  test.pri  triangle.txt  twosquares.txt
(+30 files in other folders)
